--- a/ProyectoFinal/DATA/DATA/DATA.csproj
+++ b/ProyectoFinal/DATA/DATA/DATA.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Accesorio.cs" />
+    <Compile Include="Clientes.cs" />
     <Compile Include="Libreria.cs" />
     <Compile Include="Libro.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
