--- a/ProyectoFinal/GUI/GUI.csproj
+++ b/ProyectoFinal/GUI/GUI.csproj
@@ -120,6 +120,30 @@
     <Compile Include="MenuCliente.Designer.cs">
       <DependentUpon>MenuCliente.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModificarAccesorio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModificarAccesorio.Designer.cs">
+      <DependentUpon>ModificarAccesorio.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ModificarLibreria.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModificarLibreria.Designer.cs">
+      <DependentUpon>ModificarLibreria.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ModificarLibro.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModificarLibro.Designer.cs">
+      <DependentUpon>ModificarLibro.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ModificarUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModificarUsuario.Designer.cs">
+      <DependentUpon>ModificarUsuario.cs</DependentUpon>
+    </Compile>
     <Compile Include="NuevoUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -163,6 +187,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MenuCliente.resx">
       <DependentUpon>MenuCliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModificarAccesorio.resx">
+      <DependentUpon>ModificarAccesorio.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModificarLibreria.resx">
+      <DependentUpon>ModificarLibreria.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModificarLibro.resx">
+      <DependentUpon>ModificarLibro.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModificarUsuario.resx">
+      <DependentUpon>ModificarUsuario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="NuevoUsuario.resx">
       <DependentUpon>NuevoUsuario.cs</DependentUpon>
