--- a/ProyectoFinal/GUI/App.config
+++ b/ProyectoFinal/GUI/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="GUI.Properties.Settings.ProyectoFinalConnectionString"
+            connectionString="Data Source=LAPTOP-3SNBQ5QJ\SQLEXPRESS;Initial Catalog=ProyectoFinal;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
