--- a/ProyectoFinal/GUI/App.config
+++ b/ProyectoFinal/GUI/App.config
@@ -6,6 +6,9 @@
         <add name="GUI.Properties.Settings.ProyectoFinalConnectionString"
             connectionString="Data Source=LAPTOP-3SNBQ5QJ\SQLEXPRESS;Initial Catalog=ProyectoFinal;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="GUI.Properties.Settings.BibliotecaConnectionString"
+            connectionString="Data Source=DESKTOP-1KQV3DB\SQLEXPRESS;Initial Catalog=Biblioteca;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
